--- a/public/index.html
+++ b/public/index.html
@@ -18,15 +18,15 @@
             <nav class="navbar navbar-inverse" role="navigation" style="padding-left:130px;">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="/">Home<span class="sr-only">(current)</span></a></li>
-                    <li><a href="/about">About us</a></li>
-                    <li><a href="/contact">Contact us</a></li>
+                    <li><a href="#">About us</a></li>
+                    <li><a href="#">Contact us</a></li>
                 </ul>
             </nav>
         </div>
         <br/>
         <div class="jumbotron">
             <p>
-                Under Construction
+              <center> Under Construction</center>
             </p>
         </div>
     </div>
