--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
 
 <nav class="navbar main-nav navbar-expand-lg p-0">
   <div class="container">
-      <a class="navbar-brand" href="index.html"><img src="images/logo.svg" alt="logo"></a>
+      <a class="navbar-brand" href="index.html"><img src="images/" alt="logo"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="tf-ion-android-menu"></span>
       </button>
@@ -41,35 +41,26 @@
       <ul class="navbar-nav ml-auto">
         <li class="nav-item dropdown active dropdown-slide">
           <a class="nav-link" href="#"  data-toggle="dropdown">Home
-            <span><i class="tf-ion-ios-arrow-down"></i></span>
           </a>
           <!-- Dropdown list -->
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="homepage.html">Homepage</a>
-            <a class="dropdown-item" href="homepage-2.html">Homepage 2</a>
-            <a class="dropdown-item" href="homepage-3.html">Homepage 3</a>
+							<a class="dropdown-item" href="team.html">Team</a>
           </div>
+				</li>
+				<li class="nav-item">
+          <a class="nav-link" href="about.html">About</a>
         </li>
         <li class="nav-item dropdown dropdown-slide">
-          <a class="nav-link" href="#"  data-toggle="dropdown">Pages
+          <a class="nav-link" href="#"  data-toggle="dropdown">Ether CRM
             <span><i class="tf-ion-ios-arrow-down"></i></span>
           </a>
           <!-- Dropdown list -->
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="team.html">Team</a>
-            <a class="dropdown-item" href="career.html">Career</a>
-            <a class="dropdown-item" href="blog.html">Blog</a>
-            <a class="dropdown-item" href="blog-single.html">Blog Single</a>
-            <a class="dropdown-item" href="privacy-policy.html">Privacy</a>
+            <a class="dropdown-item" href="career.html">Our technology</a>
+            <a class="dropdown-item" href="blog.html">News &amp; updates</a>
+            <a class="dropdown-item" href="privacy-policy.html">Privacy &amp; TC's</a>
             <a class="dropdown-item" href="FAQ.html">FAQ</a>
-            <a class="dropdown-item" href="sign-in.html">Sign In</a>
-            <a class="dropdown-item" href="sign-up.html">Sign Up</a>
-            <a class="dropdown-item" href="404.html">404</a>
-            <a class="dropdown-item" href="comming-soon.html">Coming Soon</a>
           </div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="about.html">About</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="contact.html">Contact</a>
@@ -87,7 +78,7 @@
 			<div class="col-lg-8 m-auto">
 				<div class="block">
 					<!-- Heading -->
-					<h1>The only choice for advisers & wealth managers</h1>
+					<h1>The only choice for advisers &amp; wealth managers</h1>
 					<!-- Sub-heading -->
 					<h3>Simple, intuitive technology that makes it easy to make happy,
 						manage your lifestyle, and work balances faster.</h3>
@@ -99,7 +90,7 @@
 					</div>
 					<!-- Image -->
 					<div class="image-content">
-						<img class="img-fluid" src="images/ethercrm-laptop.png" alt="ether-crm-laptop">
+						<img class="img-fluid" src="images/ether-tablet.png" alt="ether-crm-tablet">
 					</div>
 				</div>
 			</div>
@@ -186,8 +177,8 @@
 		<div class="row">
 			<div class="col-lg-12">
 				<div class="section-title">
-					<h2>An Interface For Lifestyle</h2>
-					<p>Small Apps makes it easy to stay on top of your Life Style. No late tasks. No gimmicks.</p>
+					<h2>An Interface For Lifestyle &amp; your Business</h2>
+					<p>No late tasks. No imcomplete documentation. No uncompliant files. No missed client reviews.  Better Business.</p>
 				</div>
 			</div>
 		</div>
@@ -195,7 +186,7 @@
 			<div class="col-lg-6 align-self-center">
 				<!-- Feature Image -->
 				<div class="service-thumb left">
-					<img class="img-fluid" src="images/all-ether.png" alt="ethercrm-platform">
+					<img class="img-fluid" src="images/ethercrm-laptop.png" alt="ethercrm-platform">
 				</div>
 			</div>
 			<div class="col-lg-5 mr-auto align-self-center">
@@ -458,7 +449,7 @@
               <li><a href="">Career</a></li>
               <li><a href="">Contact</a></li>
               <li><a href="">Investor</a></li>
-              <li><a href="">Terms</a></li>
+              <li><a href="">Terms and Conditions</a></li>
             </ul>
           </div>
         </div>
