--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
 
 <nav class="navbar main-nav navbar-expand-lg p-0">
   <div class="container">
-      <a class="navbar-brand" href="index.html"><img src="images/" alt="logo"></a>
+      <a class="navbar-brand" href="index.html"><img src="images/ether-crm-fav.png" alt="ether-logo"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="tf-ion-android-menu"></span>
       </button>
@@ -78,13 +78,13 @@
 			<div class="col-lg-8 m-auto">
 				<div class="block">
 					<!-- Heading -->
-					<h1>The only choice for advisers &amp; wealth managers</h1>
+					<h1>The only choice for Advisers &amp; Wealth Managers</h1>
 					<!-- Sub-heading -->
-					<h3>Simple, intuitive technology that makes it easy to make happy,
-						manage your lifestyle, and work balances faster.</h3>
+					<h3>Simple, intuitive technology that makes it easy to stay compliant,
+						manage your business and better serve clients needs.</h3>
 					<div class="download">
 						<a href="" class="btn btn-download">
-							Buy today
+							Buy Today
 							<span class="tf-ion-arrow-down-c"></span>
 						</a>
 					</div>
@@ -108,26 +108,29 @@
 			<div class="col-lg-6 ml-auto justify-content-center">
 				<!-- Feature Mockup -->
 				<div class="image-content">
-					<img class="img-fluid" src="images/feature/feature-new-01.png" alt="iphone">
+					<img class="img-fluid" src="images/All-ether.png" alt="ether-platform">
 				</div>
 			</div>
 			<div class="col-lg-6 mr-auto align-self-center">
 				<div class="feature-content">
 					<!-- Feature Title -->
-					<h2>Increase your productivity with Small Apps</h2>
+					<h2>Simple and easy to use technology</h2>
 					<!-- Feature Description -->
-					<p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+					<p class="desc">Ether CRM makes managing your clients and your business easy.<p></p>
+					Reduce Risk, Keep Clients Happy &amp; Increase Profit.
+					</p>
 				</div>
 				<!-- Testimonial Quote -->
 				<div class="testimonial">
 					<p>
-						"InVision is a window into everything that's being designed at Twitter. It gets all of our best work in one place."
+						"Ether CRM have saved my business thousands of pounds from day one.<p></p>
+						 It's responsiveness and spend has saves 8 hours at least per week per person in administration time, amazing."
 					</p>
 					<ul class="list-inline meta">
 						<li class="list-inline-item">
 							<img src="images/testimonial/feature-testimonial-thumb.png" alt="">
 						</li>
-						<li class="list-inline-item">Jonathon Andrew , Themefisher</li>
+						<li class="list-inline-item">Operations Manager , CM Pensions</li>
 					</ul>
 				</div>
 			</div>
@@ -141,20 +144,22 @@
 			<div class="col-lg-6 ml-auto align-self-center">
 				<div class="feature-content">
 					<!-- Feature Title -->
-					<h2>Increase your productivity with Small Apps</h2>
+					<h2>Clear, Simple and Compliant.</h2>
 					<!-- Feature Description -->
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+					<p>Ether CRM is a SaaS cloud based customer relationship management system. <p></p>
+						The system is specially designed for financial adviser and wealth managers in the EU &amp; UK to meet regulatory and business needs within financial services.</p>
 				</div>
 				<!-- Testimonial Quote -->
 				<div class="testimonial">
 					<p>
-						"InVision is a window into everything that's being designed at Twitter. It gets all of our best work in one place."
+						"I came across Ether CRM by accident and haven’t looked since. A cost-effective solution that is safe and secure.<p></P> 
+						It helps keep us in line with FCA and UK guidelines when it comes to client data and security."
 					</p>
 					<ul class="list-inline meta">
 						<li class="list-inline-item">
 							<img src="images/testimonial/feature-testimonial-thumb.png" alt="">
 						</li>
-						<li class="list-inline-item">Jonathon Andrew , Themefisher</li>
+						<li class="list-inline-item">Director , Templar EIS</li>
 					</ul>
 				</div>
 			</div>
@@ -178,7 +183,7 @@
 			<div class="col-lg-12">
 				<div class="section-title">
 					<h2>An Interface For Lifestyle &amp; your Business</h2>
-					<p>No late tasks. No imcomplete documentation. No uncompliant files. No missed client reviews.  Better Business.</p>
+					<p>No late tasks. No imcomplete documentation. No uncompliant files. No missed client reviews. Better Business.</p>
 				</div>
 			</div>
 		</div>
@@ -198,20 +203,24 @@
 								<!-- Icon -->
 								<i class="tf-ribbon"></i>
 								<!-- Heading -->
-								<h3>Easy Prototyping</h3>
+								<h3>Data Security</h3>
 								<!-- Description -->
-								<p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Curabitur aliquet quam id dui</p>
+								<p>Storing data securely is of paramount importance to our business so we employ the latest technology to</p>
+									<p>ensure that your client data and business data is secure. Using the latest in I.T. infrastructure.</p>
+									</p>
 							</div>
 						</div>
 						<div class="col-md-6 col-xs-12">
 							<!-- Service 01 -->
 							<div class="service-item">
 								<!-- Icon -->
-								<i class="tf-puzzle"></i>
+								<i class="tf-clock"></i>
 								<!-- Heading -->
-								<h3>Sensor Bridge</h3>
+								<h3>Availible 24/7</h3>
 								<!-- Description -->
-								<p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Curabitur aliquet quam id dui</p>
+								<p>Accessible from any location. Rather than being restricted to installations on individual computers. </p>
+									<p>Your CRM is deployed in GEO-SPECIFIC locations, for compliance and data protection.</p>
+									</p>
 							</div>
 						</div>
 						<div class="col-md-6 col-xs-12">
@@ -220,9 +229,10 @@
 								<!-- Icon -->
 								<i class="tf-bargraph"></i>
 								<!-- Heading -->
-								<h3>Strategist</h3>
+								<h3>Customisable client on-boarding</h3>
 								<!-- Description -->
-								<p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Curabitur aliquet quam id dui</p>
+								<p>Using our pre-built templates or making your own you can customise the client on-boarding process. </p> 
+								<p> Unlike other systems we give you the choice choose, whilst enhancing AML, KYC and due diligence requirements.</p>
 							</div>
 						</div>
 						<div class="col-md-6 col-xs-12">
@@ -231,9 +241,10 @@
 								<!-- Icon -->
 								<i class="tf-adjustments"></i>
 								<!-- Heading -->
-								<h3>Art Direction</h3>
+								<h3>Improve client servicing</h3>
 								<!-- Description -->
-								<p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Curabitur aliquet quam id dui</p>
+								<p>Ensuring all records are stored compliantly and updated to regultory standards is only part of the puzzle.</p>
+								<p> By segemnting clients and establishing a simple work flow, client reviews and on-going servicing is easy to do, helpnig your retain clients</P>
 							</div>
 						</div>
 					</div>
@@ -254,9 +265,11 @@
 			<div class="col-lg-12">
 				<div class="content-block">
 					<!-- Heading -->
-					<h2>Watch Our Promo Video</h2>
+					<h2>Ether CRM</h2>
 					<!-- Promotional Speech -->
-					<p>Vivamus suscipit tortor eget felis porttitor volutpat. Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Vivamus </p>
+					<p>Harnessing the power of the latest	security and web applications, <br>
+						 Giving our clients both ease of use and peace of mind.
+							</p>
 					<!-- Popup Video -->
 					<a data-fancybox href="http://www.youtube.com/watch?v=opj24KnzrWo">
 						<i class="tf-ion-play video"></i>
@@ -422,8 +435,8 @@
             <ul>
               <li><a href="sign-up.html">Singup</a></li>
               <li><a href="sign-in.html">Login</a></li>
-              <li><a href="#">Help & Support</a></li>
-              <li><a href="blog.html">Blog</a></li>
+              <li><a href="#">Help &amp; Support</a></li>
+              <li><a href="blog.html">News </a></li>
             </ul>
           </div>
         </div>
