--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,9 @@
   <link href="plugins/fancybox/jquery.fancybox.min.css" rel="stylesheet">
 
   <!-- CUSTOM CSS -->
-  <link href="css/style.css" rel="stylesheet">
+	<link href="css/style.css" rel="stylesheet">
+	<link href="css/animate.css" rel="stylesheet">
+	
 
   <!-- FAVICON -->
   <link href="images/EtherCRM-small-logo.png" rel="shortcut icon">
@@ -86,7 +88,7 @@
 					</div>
 					<!-- Image -->
 					<div class="image-content">
-						<img class="img-fluid" src="images/ether-tablet.png" alt="ether-crm-tablet">
+						<img class="img-fluid" src="images/ether-tablet.png" alt="ether-crm-tablet" class="animated bounce">
 					</div>
 				</div>
 			</div>
@@ -162,7 +164,7 @@
 			<div class="col-lg-6 mr-auto justify-content-center">
 				<!-- Feature mockup -->
 				<div class="image-content">
-					<img class="img-fluid" src="images/feature/feature-new-02.png" alt="ipad">
+					<img class="img-fluid" src="images/Ether-Chat.png" alt="ether-teamchat">
 				</div>
 			</div>
 		</div>
