--- a/public/FAQ.html
+++ b/public/FAQ.html
@@ -24,7 +24,7 @@
   <link href="css/style.css" rel="stylesheet">
 
   <!-- FAVICON -->
-  <link href="images/favicon.png" rel="shortcut icon">
+  <link href="images/EtherCRM-small-logo.png" rel="shortcut icon">
 
 </head>
 
