--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
           <!-- Dropdown list -->
           <div class="dropdown-menu">
             <a class="dropdown-item" href="career.html">Our technology</a>
-            <a class="dropdown-item" href="blog.html">News &amp; updates</a>
+            <a class="dropdown-item" href="news.html">News &amp; updates</a>
             <a class="dropdown-item" href="privacy-policy.html">Privacy &amp; TC's</a>
             <a class="dropdown-item" href="FAQ.html">FAQ</a>
           </div>
