--- a/public/404.html
+++ b/public/404.html
@@ -26,13 +26,14 @@
   <!-- FAVICON -->
   <link href="images/EtherCRM-small-logo.png" rel="shortcut icon">
 
+
 </head>
 
 <body class="body-wrapper" class="hero-nature">
 
 
 <section class="error-page">
-	<div class="center">
+	<div class="center hero-nature" >
 		<div class="block text-center">
 			<h1>404</h1>
 			<h3>Page Not Found</h3>
