--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,9 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="contact.html">Contact</a>
-        </li>
+				</li>
+				<ul class="nav nav-pills">
+					<li role="presentation" class="active"><a href="sign-in.html">Login</a><span class="glyphicon glyphicon-user"></span> </li>
       </ul>
       </div>
   </div>
