--- a/public/FAQ.html
+++ b/public/FAQ.html
@@ -31,7 +31,42 @@
 <body class="body-wrapper">
 
 
-		<nav class="navbar main-nav navbar-expand-lg p-0">
+	<nav class="navbar main-nav navbar-expand-lg p-0">
+		<div class="container">
+				<a class="navbar-brand" href="index.html"><img src="images/EtherCRM-small-logo.png" alt="ether-logo"></a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="tf-ion-android-menu"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNav">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item dropdown active dropdown-slide">
+						<a class="nav-link" href="#"  data-toggle="dropdown">Home
+						</a>
+						<!-- Dropdown list -->
+					<li class="nav-item">
+						<a class="nav-link" href="about.html">About</a>
+					</li>
+					<li class="nav-item dropdown dropdown-slide">
+						<a class="nav-link" href="#"  data-toggle="dropdown">Ether CRM
+							<span><i class="tf-ion-ios-arrow-down"></i></span>
+						</a>
+						<!-- Dropdown list -->
+						<div class="dropdown-menu">
+							<a class="dropdown-item" href="career.html">Our technology</a>
+							<a class="dropdown-item" href="news.html">News &amp; updates</a>
+							<a class="dropdown-item" href="privacy-policy.html">Privacy &amp; TC's</a>
+							<a class="dropdown-item" href="FAQ.html">FAQ</a>
+						</div>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="contact.html">Contact</a>
+					</li>
+					<ul class="nav nav-pills">
+						<li role="presentation" class="active"><a href="sign-in.html">Login</a><span class="glyphicon glyphicon-user"></span> </li>
+				</ul>
+				</div>
+		</div>
+	</nav>
 				<div class="container">
 						<a class="navbar-brand" href="index.html"><img src="images/ether-small-logo.png" alt="ether-logo"></a>
 						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
