--- a/public/login-client.html
+++ b/public/login-client.html
@@ -41,7 +41,7 @@
 					<!-- Content -->
 					<div class="content text-center">
 						<div class="logo">
-							<a href="homepage.html"><img src="images/logo.svg" alt=""></a>
+							<a href="homepage.html"><img src="images/ether-blue-signin.png" alt="Ether-logo"></a>
 						</div>
 						<div class="title-text">
 							<h3>Sign in to  To Your Account</h3>
