--- a/public/index.html
+++ b/public/index.html
@@ -35,14 +35,14 @@
 
 <nav class="navbar main-nav navbar-expand-lg p-0">
   <div class="container">
-      <a class="navbar-brand" href="index.html"><img src="images/EtherCRM-small-logo.png" alt="ether-logo"></a>
+      <a class="navbar-brand" href="index.html"><img src="images/EtherCRM-blue.png" alt="ether-logo"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="tf-ion-android-menu"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item dropdown active dropdown-slide">
-          <a class="nav-link" href="#"  data-toggle="dropdown">Home
+          <a class="nav-link" href="index.html"  data-toggle="dropdown">Home
           </a>
           <!-- Dropdown list -->
 				<li class="nav-item">
@@ -54,7 +54,7 @@
           </a>
           <!-- Dropdown list -->
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="career.html">Our technology</a>
+            <a class="dropdown-item" href="Our technology.html">Our technology</a>
             <a class="dropdown-item" href="news.html">News &amp; updates</a>
             <a class="dropdown-item" href="privacy-policy.html">Privacy &amp; TC's</a>
             <a class="dropdown-item" href="FAQ.html">FAQ</a>
@@ -84,7 +84,7 @@
 						manage your business and better serve clients needs.</h3>
 					<div class="download">
 						<a href="" class="btn btn-download">
-							Buy Today
+							Book a Demo Today
 							<span class="tf-ion-arrow-down-c"></span>
 						</a>
 					</div>
