--- a/public/Ethercrm-sales-reg.html
+++ b/public/Ethercrm-sales-reg.html
@@ -53,33 +53,21 @@
 					</div>
           <h3>Benefits of joining EtherCRM?</h3>
           <ul class="sales-list">
-            <il><i class="fa-li fa fa-icon-ok"></i>High levels of sales comission and re-sale fees paid.</li>
-            <li>Simple and easy business submission process.</li>
-            <li>Sales and marketing material provided.</li>    
-            <li>Easy to sell intuitive technology, desperately needed in fincial services</li>
-            <li>Cheaper than the competion, when quoted on a like for like basis.</li>
+            <li><class="glyphicon glyphicon-gbp">High levels of sales comission and re-sale fees paid.</li>
+            <li><class="glyphicon-glyphicon-upload"></class>Simple and easy business submission process.</li>
+            <li><class="glyphicon-glyphicon-bullhorn"></class>Sales and marketing material provided.</li>    
+            <li><class="glyphicon-glyphicon-resize-small"></class>Easy to sell intuitive technology, desperately needed in fincial services</li>
+            <li><class="glyphicon-glyphicon-piggy-bank"></class>Cheaper than the competion, when quoted on a like for like basis.</li>
+            <li><class="glyphicon-glyphicon-globe"></class>Global reach, meaning more sales opportunities.</li>
+            <li><class="glyphicon-glyphicon-euro"></class>Build your sales team to reach additional productiviy bonuses.</li>
+            <li><class="glyphicon-glyphicon-level-up"></class>Work flexability, with unlimited earning potential.</li>
           </ul>
-          <ul>
-            <li class="glyphicon glyphicon-gbp">Lists</li> <span class="glyphicon glyphicon-file"></span>
-            <li class="icon-ok">Buttons</li>
-            <li class="icon-ok">Button groups</li>
-            <li class="icon-ok">Navigation</li>
-            <li class="icon-ok">Prepended form inputs</li>
-          </ul>
-          <ul class="fa-ul">
-            <li><i class="fa-li fa fa-check-square"></i>List icons</li>
-            <li><i class="fa-li fa fa-check-square"></i>can be used</li>
-            <li><i class="fa-li fa fa-spinner fa-spin"></i>as bullets</li>
-            <li><i class="fa-li fa fa-square"></i>in lists</li>
-          </ul>
-					<p>
+         	<p>
 						<bold>Why delay?.</div>
 					</p>
-					<div class="button">
-						<a href=""  button type="button" class="btn btn-outline-primary btn-lg">
-							Register today
-							<span class="ion-ios-pie-outline"></span>
-						</a> <br></br>
+          <button type="button" class="btn btn-labeled btn-success">
+            <span class="btn-label"><i class="glyphicon glyphicon-thumbs-up"></i></span>Thumbs
+            Register</button>
 					</div>
 					</div>
 				</div>
