--- a/public/Ethercrm-sales-reg.html
+++ b/public/Ethercrm-sales-reg.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
   <!-- SITE TITTLE -->
@@ -7,11 +8,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>EtherCRM</title>
-  
+
   <!-- PLUGINS CSS STYLE -->
   <!-- Bootstrap -->
   <link href="plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Themefisher Font -->  
+  <!-- Themefisher Font -->
   <link href="plugins/themefisher-font/style.css" rel="stylesheet">
   <!-- Owl Carousel -->
   <link href="plugins/owl-carousel/assets/owl.carousel.min.css" rel="stylesheet" media="screen">
@@ -19,7 +20,7 @@
   <link href="plugins/owl-carousel/assets/owl.theme.green.min.css" rel="stylesheet" media="screen">
   <!-- Fancy Box -->
   <link href="plugins/fancybox/jquery.fancybox.min.css" rel="stylesheet">
-  <!--Font Awesome --> 
+  <!--Font Awesome -->
   <link href="plugins/font-awesome/font-awesome.css" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -35,51 +36,62 @@
 <body class="body-wrapper">
 
 
-<!--============================
+  <!--============================
 =            Banner            =
 =============================-->
-<div class="section banner-full">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-6">
-				<div class="image">
-					<img class="img" src="images/ethercrm-mac.png" alt="Ethercrm-demo">
-				</div>
-			</div>
-			<div class="col-lg-6 align-self-center nopadding">
-				<div class="block">
-					<div class="logo">
-						<a href="index.html"><img width=200 height=150 src="images/Ether-sales.png" alt="ether-sales"></a>
-					</div>
-          <h3>Benefits of joining EtherCRM?</h3>
-          <ul class="sales-list">
-            <li><class="glyphicon glyphicon-gbp">High levels of sales comission and re-sale fees paid.</li>
-            <li><class="glyphicon-glyphicon-upload"></class>Simple and easy business submission process.</li>
-            <li><class="glyphicon-glyphicon-bullhorn"></class>Sales and marketing material provided.</li>    
-            <li><class="glyphicon-glyphicon-resize-small"></class>Easy to sell intuitive technology, desperately needed in fincial services</li>
-            <li><class="glyphicon-glyphicon-piggy-bank"></class>Cheaper than the competion, when quoted on a like for like basis.</li>
-            <li><class="glyphicon-glyphicon-globe"></class>Global reach, meaning more sales opportunities.</li>
-            <li><class="glyphicon-glyphicon-euro"></class>Build your sales team to reach additional productiviy bonuses.</li>
-            <li><class="glyphicon-glyphicon-level-up"></class>Work flexability, with unlimited earning potential.</li>
-          </ul>
-         	<p>
-						<bold>Why delay?.</div>
-					</p>
-          <button type="button" class="btn btn-labeled btn-success">
-            <span class="btn-label"><i class="glyphicon glyphicon-thumbs-up"></i></span>Thumbs
-            Register</button>
-					</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-<!--====  End of Banner  ====-->
+  <div class="section banner-full">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="image">
+            <img class="img" src="images/ethercrm-mac.png" alt="Ethercrm-demo">
+          </div>
+        </div>
+        <div class="col-lg-6 align-self-center nopadding">
+          <div class="block">
+            <div class="logo">
+              <a href="index.html">
+                <img width=195 height=180 src="images/Ether-sales.png" alt="ether-sales">
+              </a>
+            </div>
+            <h3>Benefits of joining EtherCRM?</h3>
+            <ul>
+              <li class="glyphicon glyphicon-gbp">High levels of sales comission and re-sale fees paid.
+              </li>
+              <li class="glyphicon glyphicon-gbp">Simple and easy business submission process.
+              </li>
+              <li class="glyphicon-glyphicon-bullhorn">Sales and marketing material provided.
+              </li>
+              <li class="glyphicon-glyphicon-resize-small">Easy to sell intuitive technology, desperately needed in fincial services.
+              </li>
+              <li class="glyphicon-glyphicon-piggy-bank">Cheaper than the competion, when quoted on a like for like basis.
+              </li>
+              <li class="glyphicon-glyphicon-globe">Global reach, meaning more sales opportunities.
+              </li>
+              <li class="glyphicon-glyphicon-euro">Build your sales team to reach additional productiviy bonus.
+              </li>
+              <li class="glyphicon-glyphicon-level-up">Work flexability, with unlimited earning potential.
+              </li>
+            </ul>
+            <div class="example">
+              <h3>Why Delay??</h3>
+              <button type="button" class="btn btn-labeled btn-success text-align: justify; ">
+                <span class="btn-label">
+                  <i class="glyphicon glyphicon-thumbs-up"></i>
+                </span>Register Today
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+  <!--====  End of Banner  ====-->
 
 
   <!-- JAVASCRIPTS -->
-  
+
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBI14J_PNWVd-m0gnUBkjmhoQyNyd7nllA" async defer></script>
 
   <script src="plugins/jquery/jquery.js"></script>
@@ -89,7 +101,7 @@
   <script src="plugins/fancybox/jquery.fancybox.min.js"></script>
   <script src="plugins/smoothscroll/SmoothScroll.min.js"></script>
   <script src="plugins/syotimer/jquery.syotimer.min.js"></script>
-  
+
   <script src="js/custom.js"></script>
 </body>
 
