--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,15 @@
   <!-- CUSTOM CSS -->
 	<link href="css/style.css" rel="stylesheet">
 	<link href="css/animate.css" rel="stylesheet">
+
+	<!--Font Awesome -->
+  <link href="plugins/font-awesome/font-awesome.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	
+  <!-- CUSTOM CSS -->
+  <link href="css/style.css" rel="stylesheet">
 
   <!-- FAVICON -->
   <link href="images/EtherCRM-small-logo.png" rel="shortcut icon">
@@ -35,7 +43,7 @@
 
 <nav class="navbar main-nav navbar-expand-lg p-0">
   <div class="container">
-      <a class="navbar-brand" href="index.html"><img src="images/EtherCRM-blue.png" alt="ether-logo"></a>
+      <a class="navbar-brand" href="index.html"><img src="images/EtherCRM-small-logo.png" alt="ether-logo"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="tf-ion-android-menu"></span>
       </button>
@@ -63,8 +71,8 @@
         <li class="nav-item">
           <a class="nav-link" href="contact.html">Contact</a>
 				</li>
-				<div class="btn-group">
-					<a class="btn btn-primary" href="#"><i class="icon-user"></i> User</a>
+				<div class="btn-group" class="align-right" style="padding-top: 12px;">
+					<a class="btn btn-primary" href="#"><i class="icon-user"></i> Client Login</a>
 					<a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#"><span class="icon-chevron-down"></span></a>
 					<ul class="dropdown-menu">
 							<li><a href="#"><i class="icon-pencil"></i> Edit</a></li>
