--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,7 @@
           <a class="nav-link" href="contact.html">Contact</a>
 				</li>
 				<div class="btn-group" class="align-right" style="padding-top: 12px;">
-					<a class="btn btn-primary" href="#"><i class="icon-user"></i> Client Login</a>
+					<a class="btn btn-primary" href="login-client.html"><i class="icon-user"></i> Client Login</a>
 					<a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#"><span class="icon-chevron-down"></span></a>
 					<ul class="dropdown-menu">
 							<li><a href="#"><i class="icon-pencil"></i> Edit</a></li>
