--- a/public/index.html
+++ b/public/index.html
@@ -55,34 +55,42 @@
           <!-- Dropdown list -->
 				<li class="nav-item">
           <a class="nav-link" href="about.html">About</a>
-        </li>
+				</li>
+				<li class="nav-item">
+          <a class="nav-link" href="Our technology.html">Our technology</a>
+				</li>
+				<li class="nav-item">
+          <a class="nav-link" href="New.html">News &amp; Updates</a>
+				</li>
         <li class="nav-item dropdown dropdown-slide">
-          <a class="nav-link" href="#"  data-toggle="dropdown">Ether CRM
+          <a class="nav-link" href="#"  data-toggle="dropdown">FAQs
             <span><i class="tf-ion-ios-arrow-down"></i></span>
           </a>
           <!-- Dropdown list -->
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="Our technology.html">Our technology</a>
-            <a class="dropdown-item" href="news.html">News &amp; updates</a>
-            <a class="dropdown-item" href="privacy-policy.html">Privacy &amp; TC's</a>
-            <a class="dropdown-item" href="FAQ.html">FAQ</a>
+            <a class="dropdown-item" href="FAQ.html">Frequently Asked Questions</a>
+            <a class="dropdown-item" href="news.html">Compliance</a>
+            <a class="dropdown-item" href="privacy-policy.html">Privacy Policy</a>
           </div>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="contact.html">Contact</a>
 				</li>
-				<div class="btn-group" class="align-right" style="padding-top: 12px;">
+				<div class="btn-group" class="align-right" style="padding-top: 20px; padding-right: 5px; padding-left: 1px;">
 					<a class="btn btn-primary" href="login-client.html"><i class="icon-user"></i> Client Login</a>
 					<a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#"><span class="icon-chevron-down"></span></a>
 					<ul class="dropdown-menu">
-							<li><a href="#"><i class="icon-pencil"></i> Edit</a></li>
-							<li><a href="#"><i class="icon-trash"></i> Delete</a></li>
-							<li><a href="#"><i class="icon-ban-circle"></i> Ban</a></li>
-							<li class="divider"></li>
-							<li><a href="#"><i class="i"></i> Make admin</a></li>
+							<li><a href="#"><i class="icon-pencil"></i> Client Registration</a></li>
 					</ul>
 			</div>
-      </div>
+			<div class="btn-group" class="align-right" style="padding-top: 20px;">
+				<a class="btn btn-primary" href="login-sales.html"><i class="icon-user"></i> Partner Login</a>
+				<a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#"><span class="icon-chevron-down"></span></a>
+				<ul class="dropdown-menu">
+						<li><a href="login-sales-reg.html"><i class="icon-pencil"></i> Partner Registration</a></li>
+				</ul>
+	  	</div>
+    </div>
   </div>
 </nav>
 <!--====================================
@@ -469,8 +477,7 @@
             </ul>
           </div>
         </div>
-        <div class="col-lg-2 col-md-3 col-sm-6 col-xs-12">
-          <div class="block-2">
+         <div class="block-2">
             <!-- heading -->
             <h6>Company</h6>
             <!-- links -->
@@ -485,8 +492,6 @@
       </div>
     </div>
 </footer>
-
-
 
   <!-- JAVASCRIPTS -->
   
