--- a/public/404.html
+++ b/public/404.html
@@ -39,7 +39,7 @@
 			<h3>Page Not Found</h3>
 			<p>The link you clicked may be broken or the 
 				<br>page may have been removed.</p>
-			<a href="index.html" class="btn btn-main">visit homepage</a>
+			<a href="index.html" class="btn btn-main">Back to homepage</a>
 		</div>
 	</div>
 </section>
