--- a/public/contact.html
+++ b/public/contact.html
@@ -30,44 +30,58 @@
 
 <body class="body-wrapper">
 
-
-        <div class="container">
-            <a class="navbar-brand" href="index.html"><img src="images/ether-small-logo.png" alt="ether-logo"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="tf-ion-android-menu"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item dropdown active dropdown-slide">
-                <a class="nav-link" href="#"  data-toggle="dropdown">Home
-                </a>
-                <!-- Dropdown list -->
-                <div class="dropdown-menu">
-                    <a class="dropdown-item" href="team.html">Team</a>
-                </div>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="about.html">About</a>
-              </li>
-              <li class="nav-item dropdown dropdown-slide">
-                <a class="nav-link" href="#"  data-toggle="dropdown">Ether CRM
-                  <span><i class="tf-ion-ios-arrow-down"></i></span>
-                </a>
-                <!-- Dropdown list -->
-                <div class="dropdown-menu">
-                  <a class="dropdown-item" href="career.html">Our technology</a>
-                  <a class="dropdown-item" href="blog.html">News &amp; updates</a>
-                  <a class="dropdown-item" href="privacy-policy.html">Privacy &amp; TC's</a>
-                  <a class="dropdown-item" href="FAQ.html">FAQ</a>
-                </div>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
-              </li>
-            </ul>
+  <nav class="navbar main-nav navbar-expand-lg p-0">
+    <div class="container">
+        <a class="navbar-brand" href="index.html"><img src="images/EtherCRM-small-logo.png" alt="ether-logo"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="tf-ion-android-menu"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item dropdown active dropdown-slide">
+            <a class="nav-link" href="index.html"  data-toggle="dropdown">Home
+            </a>
+            <!-- Dropdown list -->
+          <li class="nav-item">
+            <a class="nav-link" href="about.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Our technology.html">Our technology</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="New.html">News &amp; Updates</a>
+          </li>
+          <li class="nav-item dropdown dropdown-slide">
+            <a class="nav-link" href="#"  data-toggle="dropdown">FAQs
+              <span><i class="tf-ion-ios-arrow-down"></i></span>
+            </a>
+            <!-- Dropdown list -->
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="FAQ.html">Frequently Asked Questions</a>
+              <a class="dropdown-item" href="compliance.html">Compliance</a>
+              <a class="dropdown-item" href="privacy-policy.html">Privacy Policy</a>
             </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+          <div class="btn-group" class="align-right" style="padding-top: 20px; padding-right: 5px; padding-left: 1px;">
+            <a class="btn btn-primary" href="login-client.html"><i class="icon-user"></i> Client Login</a>
+            <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#"><span class="icon-chevron-down"></span></a>
+            <ul class="dropdown-menu">
+                <li><a href="#"><i class="icon-pencil"></i> Client Registration</a></li>
+            </ul>
         </div>
-      </nav>
+        <div class="btn-group" class="align-right" style="padding-top: 20px;">
+          <a class="btn btn-primary" href="login-sales.html"><i class="icon-user"></i> Partner Login</a>
+          <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#"><span class="icon-chevron-down"></span></a>
+          <ul class="dropdown-menu">
+              <li><a href="login-sales-reg.html"><i class="icon-pencil"></i> Partner Registration</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </nav>
 
 <!--================================
 =            Page Title            =
