--- a/public/career.html
+++ b/public/career.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Small Apps</title>
+  <title>Ether CRM</title>
   
   <!-- PLUGINS CSS STYLE -->
   <!-- Bootstrap -->
@@ -20,6 +20,16 @@
   <!-- Fancy Box -->
   <link href="plugins/fancybox/jquery.fancybox.min.css" rel="stylesheet">
 
+  <!-- CUSTOM CSS -->
+	<link href="css/style.css" rel="stylesheet">
+	<link href="css/animate.css" rel="stylesheet">
+
+	<!--Font Awesome -->
+  <link href="plugins/font-awesome/font-awesome.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	
   <!-- CUSTOM CSS -->
   <link href="css/style.css" rel="stylesheet">
 
