--- a/public/contact.html
+++ b/public/contact.html
@@ -21,10 +21,20 @@
   <link href="plugins/fancybox/jquery.fancybox.min.css" rel="stylesheet">
 
   <!-- CUSTOM CSS -->
+	<link href="css/style.css" rel="stylesheet">
+	<link href="css/animate.css" rel="stylesheet">
+
+	<!--Font Awesome -->
+  <link href="plugins/font-awesome/font-awesome.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	
+  <!-- CUSTOM CSS -->
   <link href="css/style.css" rel="stylesheet">
 
   <!-- FAVICON -->
-  <link href="images/favicon.png" rel="shortcut icon">
+  <link href="images/EtherCRM-small-logo.png" rel="shortcut icon">
 
 </head>
 
