--- a/public/index.html
+++ b/public/index.html
@@ -114,7 +114,7 @@
 					</div>
 					<!-- Image -->
 					<div class="image-content">
-						<img class="img-fluid" src="images/ether-tablet.png" alt="ether-crm-tablet" class="animated bounce">
+						<img class="img-fluid" src="images/ether-tablet.png" alt="ether-crm-tablet" class="animated fadeInLeftBig">
 					</div>
 				</div>
 			</div>
