--- a/public/login-sales-reg.html
+++ b/public/login-sales-reg.html
@@ -44,7 +44,7 @@
                             <div class="description">
                             	<p>
 	                            	Distribution and Sales login</p>
-	                            	<p>Want to Join?<a href="ethercrm-sales.html"><strong>Register here</strong></a></p>
+	                            	<p>Want to Join? <a href="ethercrm-sales-reg.html"><strong>Register here</strong></a></p>
                             	</p>
                             </div>
                         </div>
