--- a/public/login-client.html
+++ b/public/login-client.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Small Apps</title>
+  <title>Ether CRM</title>
   
   <!-- PLUGINS CSS STYLE -->
   <!-- Bootstrap -->
@@ -21,6 +21,16 @@
   <link href="plugins/fancybox/jquery.fancybox.min.css" rel="stylesheet">
 
   <!-- CUSTOM CSS -->
+	<link href="css/style.css" rel="stylesheet">
+	<link href="css/animate.css" rel="stylesheet">
+
+	<!--Font Awesome -->
+  <link href="plugins/font-awesome/font-awesome.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	
+  <!-- CUSTOM CSS -->
   <link href="css/style.css" rel="stylesheet">
 
   <!-- FAVICON -->
@@ -28,9 +38,12 @@
 
 </head>
 
+<div class="btn-group" class="align-right" style="padding-top: 20px; padding-left: 600px"; >
+ <button type="button" class="btn btn-labeled btn-custombtn-block btn-huge " >
+	<span class="btn-label align-centre"href="index.html" ><i class="glyphicon glyphicon-home"></i></span>Home Page</button>
+</div>
+
 <body class="body-wrapper">
-
-
 <section class="user-login section">
 	<div class="container">
 		<div class="row">
@@ -40,8 +53,8 @@
 					<div class="image align-self-center"><img class="img-fluid" src="images/Login/front-desk-sign-in.jpg" alt="desk-image"></div>
 					<!-- Content -->
 					<div class="content text-center">
-						<div class="logo">
-							<a href="homepage.html"><img src="images/ether-blue-signin.png" alt="Ether-logo"></a>
+						<div class="logo" style="padding-bottom:-20px";>
+							<a href="index.html"><img src="images/ether-blue-signin.png" alt="Ether-logo"></a>
 						</div>
 						<div class="title-text">
 							<h3>Sign in to  To Your Account</h3>
