--- a/public/login-sales.html
+++ b/public/login-sales.html
@@ -32,7 +32,10 @@
     </head>
 
     <body>
-
+            <div class="btn-group" class="align-right" style="padding-top: 20px; padding-left: 600px"; >
+                    <button type="button" class="btn btn-labeled btn-custombtn-block btn-huge " >
+                       <span class="btn-label align-centre"href="index.html" ><i class="glyphicon glyphicon-home"></i></span>Home Page</button>
+                   </div>
         <!-- Top content -->
         <div class="top-content">
         	
