--- a/public/button.html
+++ b/public/button.html
@@ -1,3 +1,44 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+
+ <!-- SITE TITTLE -->
+ <meta charset="utf-8">
+ <meta http-equiv="X-UA-Compatible" content="IE=edge">
+ <meta name="viewport" content="width=device-width, initial-scale=1">
+ <title>Ether CRM</title>
+ 
+ <!-- PLUGINS CSS STYLE -->
+ <!-- Bootstrap -->
+ <link href="plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+ <!-- Themefisher Font -->  
+ <link href="plugins/themefisher-font/style.css" rel="stylesheet">
+ <!-- Owl Carousel -->
+ <link href="plugins/owl-carousel/assets/owl.carousel.min.css" rel="stylesheet" media="screen">
+ <!-- Owl Carousel Theme -->
+ <link href="plugins/owl-carousel/assets/owl.theme.green.min.css" rel="stylesheet" media="screen">
+ <!-- Fancy Box -->
+ <link href="plugins/fancybox/jquery.fancybox.min.css" rel="stylesheet">
+
+ <!-- CUSTOM CSS -->
+   <link href="css/style.css" rel="stylesheet">
+   <link href="css/animate.css" rel="stylesheet">
+
+   <!--Font Awesome -->
+ <link href="plugins/font-awesome/font-awesome.css" rel="stylesheet">
+ <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+   
+ <!-- CUSTOM CSS -->
+ <link href="css/style.css" rel="stylesheet">
+
+ <!-- FAVICON -->
+ <link href="images/EtherCRM-small-logo.png" rel="shortcut icon">
+
+</head>
+<body>
 <div class="container">
     <div class="row">
         <h2>
@@ -36,3 +77,4 @@
         </div>
     </div>
 </div>
+</body>
