--- a/public/login-sales-reg.html
+++ b/public/login-sales-reg.html
@@ -35,7 +35,8 @@
 
         <!-- Top content -->
         <div class="top-content">
-        	
+                <span class="btn-label"><i class="glyphicon glyphicon-refresh"></i></span>Refresh</button>
+                <button type="button" class="btn btn-labeled btn-danger">
             <div class="inner-bg">
                 <div class="container">
                     <div class="row">
